--- a/app/views/static_pages/landingpage.html.slim
+++ b/app/views/static_pages/landingpage.html.slim
@@ -33,42 +33,43 @@
 .selling-points
   .container-fluid
     .row.justify-content-xl-center
-      .col-md-3
-        .selling-point
-          = icon 'far', 'clock'
-          h2 Time zone friendly
-          p Works well for remote teams. No need to look for a siutable time slot for all time zones anymore. Anyone can leave an update at any time.
+      .col-xl-9
+        .row
+          .col-md-4
+            .selling-point
+              = icon 'far', 'clock'
+              h2 Time zone friendly
+              p Works well for remote teams. No need to look for a siutable time slot for all time zones anymore. Anyone can leave an update at any time.
 
-      .col-md-3
-        .selling-point
-          = icon 'far', 'calendar-check'
-          h2 Self organisation
-          p Makes you think about what you want to acheive during the day. Having a plan will help you be more focused.
+          .col-md-4
+            .selling-point
+              = icon 'far', 'calendar-check'
+              h2 Self organisation
+              p Makes you think about what you want to acheive during the day. Having a plan will help you be more focused.
 
-      .col-md-3
-        .selling-point
-          = icon 'fas', 'shoe-prints'
-          h2 Leaves trace
-          p You can always go back and check what you or a colleague of yours did the past day, week, month or even year.
+          .col-md-4
+            .selling-point
+              = icon 'fas', 'shoe-prints'
+              h2 Leaves trace
+              p You can always go back and check what you or a colleague of yours did the past day, week, month or even year.
 
-    .row.justify-content-xl-center
-      .col-md-3
-        .selling-point
-          = icon 'fas', 'cat'
-          h2 Slacker unfriendly
-          p It is more difficult to give abstract updates. Having it written down provides a better overview of the work a person has done (or hasn't).
+          .col-md-4
+            .selling-point
+              = icon 'fas', 'cat'
+              h2 Slacker unfriendly
+              p It is more difficult to give abstract updates. Having it written down provides a better overview of the work a person has done (or hasn't).
 
-      .col-md-3
-        .selling-point
-          = icon 'far', 'dot-circle'
-          h2 Keeps you focused
-          p Distractions or getting into too many details are the usual reasons for long stand-ups. This is not possible here.
+          .col-md-4
+            .selling-point
+              = icon 'far', 'dot-circle'
+              h2 Keeps you focused
+              p Distractions or getting into too many details are the usual reasons for long stand-ups. This is not possible here.
 
-      .col-md-3
-        .selling-point
-          = icon 'fas', 'code'
-          h2 More time for coding
-          p A 15 minute stand-up meeting takes 15 minutes per employee. A 5 minute text update takes only 5 minutes per employee.
+          .col-md-4
+            .selling-point
+              = icon 'fas', 'code'
+              h2 More time for coding
+              p A 15 minute stand-up meeting takes 15 minutes per employee. A 5 minute text update takes only 5 minutes per employee.
 
 footer
   .social-links
