--- a/app/assets/stylesheets/modules/_report.scss
+++ b/app/assets/stylesheets/modules/_report.scss
@@ -107,9 +107,11 @@
     margin: 0;
   }
 
-  p {
+  .description {
     margin: 0;
     color: #999999;
+
+    p { margin: 0; }
   }
 
   margin-bottom: 1rem;
@@ -121,6 +123,15 @@
 
     .form-group:last-child {
       margin-bottom: 0;
+    }
+
+    .md-hints {
+      display: block;
+      color: #cccccc;
+      text-align: right;
+      font-size: 11px;
+
+      code { color: #cccccc; }
     }
   }
 }
