--- a/app/assets/stylesheets/modules/_report.scss
+++ b/app/assets/stylesheets/modules/_report.scss
@@ -114,6 +114,12 @@
     p { margin: 0; }
   }
 
+  .url {
+    color: #aaaaaa;
+    font-size: 12px;
+    display: block;
+  }
+
   margin-bottom: 1rem;
 
   form {
