Add changelog page

--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -72,6 +72,11 @@
 }
 
 footer {
+  .links {
+    a { color: #cccccc; }
+    margin-bottom: 1rem;
+  }
+
   .social-links {
     a {
       &:hover { color: #cccccc; }
