--- a/app/views/static_pages/landingpage.html.slim
+++ b/app/views/static_pages/landingpage.html.slim
@@ -72,6 +72,9 @@
               p A 15 minute stand-up meeting takes 15 minutes per employee. A 5 minute text update takes only 5 minutes per employee.
 
 footer
+  .links
+    = link_to 'Changelog', changelog_path
+
   .social-links
     = link_to 'https://www.facebook.com/textstandup', target: '_blank' do
       = icon 'fab', 'facebook-square'
