--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html
 
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
-      = link_to reports_path, class: 'navbar-brand' do
+      = link_to root_path, class: 'navbar-brand' do
         = image_tag 'logo_with_text.svg'
 
       button.navbar-toggler data-toggle="collapse" data-target="#navigation"
