Install full story

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -48,3 +48,4 @@ html
 
     = render 'shared/google_analytics' if Settings.google_analytics_enabled
     = render 'shared/session_stack' if Settings.session_stack_enabled
+    = render 'shared/full_story' if Settings.full_story_enabled
