--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,8 +6,9 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     = favicon_link_tag 'favicon-32x32.png'
     = favicon_link_tag 'favicon-16x16.png'
-    = stylesheet_link_tag    "application", media: 'all'
-    = javascript_include_tag "application"
+    = stylesheet_link_tag    'application', media: 'all'
+    = javascript_include_tag 'application'
+    = javascript_pack_tag 'application'
     = csrf_meta_tags
 
   body
